Fix tomcat configuration (logs, jaas, JVM settings) for cargo #50 #53